# rust-experiments

./: .gitignore  Cargo.toml  README.md  config.toml
aws-create-bucket/: Cargo.toml
aws-create-vpc/: Cargo.toml
aws-create-vpc/src/: main.rs
aws-list-buckets/: Cargo.toml
aws-profile/: Cargo.toml
aws-profile/src/: main.rs
aws-vpc/: Cargo.toml
axum-basic/: Cargo.toml
axum-basic/src/: main.rs
axum-errors/: Cargo.toml
axum-errors/src/: main.rs
axum-js-msg/: Cargo.toml
axum-js-msg/src/: lib.rs
axum-jwt/: Cargo.toml
axum-jwt/src/: main.rs
axum-ws-jwt/: Cargo.toml
axum-ws-jwt/src/: lib.rs
axum-ws-ping/: Cargo.toml
clap-basic-args/: Cargo.toml
clap-positional/: Cargo.toml
clap-positional/src/: main.rs
clap-subcommands/: Cargo.toml
create-instance/: Cargo.toml
create-instance-profile/: Cargo.toml
create-instance-profile/src/: main.rs
create-instance/src/: main.rs
default-vpc-sg/: Cargo.toml
error-tests/: Cargo.toml
error-tests/src/: main.rs
inspect-vpc/: Cargo.toml
inspect-vpc/src/: main.rs
interior-mutability/: Cargo.toml
interior-mutability-threaded/: Cargo.toml
interior-mutability-threaded/src/: main.rs
interior-mutability/src/: main.rs
internet-gateway/: Cargo.toml
more-errors/: Cargo.toml
more-errors/src/: main.rs
nats-basic/: Cargo.toml  README.md
nats-basic/src/: main.rs
option/: Cargo.toml
option/src/: main.rs
read-toml/: Cargo.toml
read-toml/src/: main.rs
reedline-test/: Cargo.toml
reedline-test/src/: main.rs
repl/: Cargo.toml
repl/src/: main.rs
s3-file-upload/: Cargo.toml
s3-file-upload/src/: main.rs
s3-gateway-endpoint/: Cargo.toml
security-group/: Cargo.toml
security-group/src/: main.rs
sql-rusqlite/: Cargo.toml
sql-rusqlite/src/: data.rs  lib.rs  main.rs
sqs/: Cargo.toml
sqs/src/: main.rs
vpc-filter/: Cargo.toml
wasm-plugin/host/: Cargo.toml
wasm-plugin/host/src/: main.rs
wasm-plugin/plugin/: Cargo.toml
wasm-plugin/plugin/src/: lib.rs
write-file/: Cargo.toml
write-file/src/: main.rs
