[workspace]
members = [
    "aws-create-bucket",
    "aws-create-vpc",
    "aws-list-buckets",
    "aws-profile",
    "aws-vpc",
    "clap-basic-args",
    "clap-positional",
    "clap-subcommands",
    "create-instance",
    "create-instance-profile",
    "default-vpc-sg",
    "error-tests",
    "inspect-vpc",
    "internet-gateway",
    "more-errors",
    "option",
    "read-toml",
    "s3-file-upload",
    "s3-gateway-endpoint",
    "security-group",
    "sqs",
    "vpc-filter",
]

[workspace.dependencies]
anyhow = "1.0"
aws-config = "0.55"
aws-sdk-ec2 = "0.27"
aws-sdk-iam = "0.27"
aws-sdk-s3 = "0.27"
aws-sdk-sqs = "0.27"
aws-types = "0.55"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"]}
