[workspace]
members = [
    "aws-create-bucket",
    "aws-create-vpc",
    "aws-list-buckets",
    "aws-profile",
    "aws-vpc",
    "axum-basic",
    "axum-errors",
    "axum-js-msg",
    "axum-jwt",
    "axum-ws-ping",
    "axum-ws-jwt",
    "clap-basic-args",
    "clap-positional",
    "clap-subcommands",
    "create-instance",
    "create-instance-profile",
    "default-vpc-sg",
    "error-tests",
    "inspect-vpc",
    "interior-mutability",
    "interior-mutability-threaded",
    "internet-gateway",
    "more-errors",
    "nats-basic",
    "option",
    "read-toml",
    "reedline-test",
    "repl",
    "s3-file-upload",
    "s3-gateway-endpoint",
    "security-group",
    "sql-rusqlite",
    "sqs",
    "vpc-filter",
    "wasm-plugin/plugin",
    "wasm-plugin/host"
]

[workspace.dependencies]
anyhow = "1.0"
async-nats = "0.31.0"
aws-config = "0.56"
aws-sdk-ec2 = "0.29"
aws-sdk-iam = "0.29"
aws-sdk-s3 = "0.29"
aws-sdk-sqs = "0.29"
aws-types = "0.56"
axum = { version = "0.6", features = ["headers", "ws"] }
chrono = "0.4.24"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4"
once_cell = "1.17.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"]}
websockets = "0.3.0"