[package]
name = "aws-create-bucket"
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Create and tag an S3 Bucket, then delete it."
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }