[package]
name = "axum-errors"
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Returning errors when Axum handlers fail"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true