[package]
name = "axum-js-msg"
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Axum WebSocket server with JavaScript messages"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "./src/bin/server.rs"

[[bin]]
name = "client"
path = "./src/bin/client.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
serde.workspace = true
serde_json = "1.0.96"
tokio.workspace = true
websockets.workspace = true
