[package]
name = "axum-jwt"
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Authentication in Axum using JWTs"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono = "0.4.24"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
