[package]
name = "default-vpc-sg"
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Security Group tests using the default VPC."
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }