[package]
name = "inspect-vpc"
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Describe the details of a VPC."
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }