[package]
name = "s3-gateway-endpoint"
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Create a VPC containing an S3 Gateway Endpoint."
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }