[package]
name = "vpc-filter"
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Describe a VPC based on it's tags."
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
aws-types = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }